external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_field_access_no_annotations.exp
error[E03010]: unbound field
  ┌─ tests/move_2024/parser/positional_field_access_no_annotations.move:6:9
  │
6 │         y.0_u8
  │         ^^^^^^ Unbound field '0_u8' in '0x42::M::Foo'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_field_access_no_annotations.move:6:11
  │
6 │         y.0_u8
  │           ^^^^ Invalid field access. Expected a number less than or equal to 255
  │
  = Positional fields must be a decimal number in the range [0 .. 255] and not be typed, e.g. `0`

