external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_field_access_no_annotations.move
address 0x42 {
module M {
    public struct Foo(u64)

    fun x(y: Foo): u64 {
        y.0_u8
    }
}
}

